resolve menu flickering issue

--- a/trunk/circle_property/css/base.css
+++ b/trunk/circle_property/css/base.css
@@ -295,3 +295,6 @@ input:disabled {
     opacity: 1;
 }
 
+#system_logout {
+    cursor: pointer;
+}
