--- a/trunk/client_views/properties_views/css/properties_base.css
+++ b/trunk/client_views/properties_views/css/properties_base.css
@@ -255,4 +255,8 @@ input:disabled {
 
 }
 
+#system_logout {
+    cursor: pointer;
+}
+
 /****End migrate from home css**/
